Fixed horizontal scroll

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -18,6 +18,7 @@ footer {
   width: 100%;
   padding: 3em 2.5vw 3em;
   background-color: $cityBlue;
+  box-sizing: border-box;
   .languages {
     display: flex;
     justify-content: center;
